--- a/rata_comparti_el_wifi/Gemfile
+++ b/rata_comparti_el_wifi/Gemfile
@@ -1,5 +1,5 @@
-
 source 'https://rubygems.org'
+source 'http://gems.github.com'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.2'
