Added route + js + model method, to search by ip

--- a/rata_comparti_el_wifi/Gemfile
+++ b/rata_comparti_el_wifi/Gemfile
@@ -39,6 +39,9 @@ gem 'openlayers-rails'
 # For find location by ip or street
 gem 'geocoder'
 
+#For search by ip based on document database
+gem 'geoip'
+
 # pretty DRY html 
 gem 'haml'
 
